# err_for_blog_post

./: Cargo.toml  README.md
00_u_are_errors/: Cargo.toml  README.md
00_u_are_errors/examples/: ex00.rs  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex09.rs  ex10.rs  ex11.rs  ex12.rs  ex13.rs  ex14.rs  ex15.rs  ex16.rs  ex17.rs  ex19.rs  ex20.rs  ex21.rs  ex22.rs  ex24.rs
01_experimentation/: Cargo.toml  README.md
01_experimentation/examples/: ex00.rs  ex000.rs  ex001.rs  ex002.rs  ex003.rs  ex004.rs  ex005.rs  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex100.rs  ex200.rs  ex300.rs  ex301.rs  ex302.rs  ex303.rs
02_production/: README.md
02_production/00_project/: Cargo.toml
02_production/00_project/src/: files.rs  main.rs
02_production/00_project/src/file_utility/: lf.rs
02_production/00_project/src/files/: listing.rs
02_production/01_project/: Cargo.toml
02_production/01_project/src/: main.rs
02_production/01_project_bis/: Cargo.toml
02_production/01_project_bis/src/: lib.rs  main.rs
02_production/02_project/: Cargo.toml
02_production/02_project/src/: 01_prod_code.rs  error.rs  lib.rs  main.rs
02_production/03_project/: Cargo.toml
02_production/03_project/src/: error.rs  error.rs.00  main.rs
02_production/04_project/: Cargo.toml
02_production/04_project/src/: error.rs  lib.rs  main.rs
02_production/05_project/: Cargo.toml
02_production/05_project/src/: error.rs  main.rs
02_production/06_project/: Cargo.toml
02_production/06_project/src/: error.rs  main.rs
(+10 files in other folders)
